Integration with Java 11 (#199)
* make it build and run with java 11

* use gradle 5.0-rc-3